# kilroytorch

./: .gitattributes  404.html  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: docs.yml  draft.yml  pypi.yml  test-multiplatform.yml  test.yml
kilroytorch/: README.md  pyproject.toml
kilroytorch/docs/: mkdocs.yml
kilroytorch/docs/docs/: index.md
kilroytorch/src/kilroytorch/: __init__.py  adapters.py  config.py  generator.py  generators.py  utils.py
kilroytorch/src/kilroytorch/losses/: blackbox.py  distance.py  distribution.py
kilroytorch/src/kilroytorch/models/: base.py
kilroytorch/src/kilroytorch/models/distribution/: base.py  gaussian.py  multiclass.py  plain.py  sequential.py
kilroytorch/src/kilroytorch/models/reward/: base.py  continuous.py  multiclass.py  plain.py  sequential.py
kilroytorch/src/kilroytorch/modules/: base.py  offline.py  online.py
kilroytorch/src/kilroytorch/modules/offline/: base.py  gaussian.py  multiclass.py  sequential.py
kilroytorch/src/kilroytorch/modules/online/: base.py  continuous.py  multiclass.py  sequential.py
kilroytorch/src/kilroytorch/samplers/: base.py  categorical.py  gaussian.py  multiclass.py
notebooks/: example.ipynb  gaussian.ipynb  gaussian_actor_critic.ipynb  multiclass.ipynb  multiclass_actor_critic.ipynb  sequential.ipynb  sequential_actor_critic.ipynb
notebooks/actor-critic/: categorical.ipynb  gaussian.ipynb  sequential.ipynb
notebooks/basic/: categorical.ipynb  gaussian.ipynb  sequential.ipynb
notebooks/comparisons/: samplers.ipynb
notebooks/examples/actor-critic/: categorical.ipynb  gaussian.ipynb  sequential.ipynb
notebooks/examples/basic/: sequential.ipynb
search/: search_index.json
usage/: index.html
