# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "kilroytorch"
version = "0.3.3"
description = "kilroy pytorch modules 🔥"
readme = "kilroytorch/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/kilroytorch"
documentation = "https://kilroybot.github.io/kilroytorch"
packages = [{ include = "kilroytorch", from = "kilroytorch/src" }]

[tool.poetry.dependencies]
python = "^3.9"
kilroyshare = "~0.7.0"
torch = "^1.11"
numpy = "^1.22"

# dev
jupyterlab = { version = "^3.2", optional = true }
kilroyplot = { version = "^0.2", optional = true }
tqdm = { version = "^4.63", optional = true }

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["jupyterlab", "kilroyplot", "tqdm", "pytest"]
test = ["pytest"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
